--- a/pages/6-contact/contact.css
+++ b/pages/6-contact/contact.css
@@ -212,8 +212,8 @@
         display: grid;
         grid-template-columns: 1fr 1fr; 
         gap: 1em;
-        align-items: start;
-        margin: 4em 5.5em 0 0;
+        align-items: end;
+        margin: 4em 5em 0 0;
         position: relative;
         grid-auto-rows: auto; 
     }
